--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,50 +1,26 @@
 <div class="container" >
-  <div class="row">
-    <div class="col-12">
-    <%=render 'public/header' %>
+    <div class="row">
+      <div class="col-12">
+      <%=render 'public/header' %>
+      </div>
     </div>
-  </div>
 
 
-  <% if @customer.errors.any? %>
-    <%= @customer.errors.count %>件のエラーが発生しました
-    <ul>
-      <% @customer.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
-  <% end %>
-    <h2>プロフィール編集</h2>
-    <%=form_with model: @customer,url:customer_path(@customer.id),method: :patch do |f| %>
-      <p>プロフィール画像</p>
-      <%=f.file_field:profile_image %>
-      <p>姓</p>
-      <%=f.text_field:last_name %>
-      <p>名</p>
-      <%=f.text_field:first_name %>
-      <p>メールアドレス</p>
-      <%=f.text_field:email %>
-      <p>自己紹介文</p>
-      <%=f.text_area:introduction, size: "40x20" %>
-      <%=f.submit "変更を保存する" %>
-      <%= link_to "退会する",withdraw_path(@customer.id) ,method: :patch,data: { confirm: '退会すると、会員登録情報やこれまでの投稿履歴が閲覧できなくなります。本当に退会しますか？' } %>
-    <% end %>
-
-<div class="row">
+    <div class="row">
       <div class="col-9">
-        <h2>プロフィール編集</h2>
-             <% if @customer.errors.any? %>
-               <%= @customer.errors.count %>件のエラーが発生しました
-               <ul>
-                 <% @customer.errors.full_messages.each do |message| %>
-                  <li><%= message %></li>
-                 <% end %>
-               </ul>
-                <% end %>
-                <br>
-                <div class="row">
-                    <div class="col-8">
-                        <form>
+         <div class="row">
+           <div class="col-8">
+                  <h2>プロフィール編集</h2>
+                       <% if @customer.errors.any? %>
+                         <%= @customer.errors.count %>件のエラーが発生しました
+                         <ul>
+                           <% @customer.errors.full_messages.each do |message| %>
+                            <li><%= message %></li>
+                           <% end %>
+                         </ul>
+                          <% end %>
+                          <br>
+
                           <%=form_with model: @customer,url:customer_path(@customer.id),method: :patch do |f| %>
                             <div class="form-group">
                                 <p>プロフィール画像</p>
@@ -65,24 +41,22 @@
                             <div class="form-group">
                                 <p>自己紹介文</p>
                                 <%=f.text_area:introduction, size: "40x20",class:"form-control" %>
-                            </div
-                        </form>
-                    </div>
-                </div>
+                            </div>
+                            <div>
+                                <%= f.submit "変更を保存する",class:"btn btn-outline-primary btn-block" %>
+                            </div>
 
-                <div class="row center-block text-center">
-                    <div class="col-4">
-                        <%= f.submit "変更を保存する",class:"btn btn-outline-primary btn-block" %>
-                    </div>
-                    <% end %>
-                </div>
-                <br>
-                <%= link_to "退会する",withdraw_path(@customer.id) ,method: :patch,data: { confirm: '退会すると、会員登録情報やこれまでの投稿履歴が閲覧できなくなります。本当に退会しますか？' },class:"btn btn-outline-primary" %>
-           </div>
-          <div class="col-3">
-           <%=render 'public/sidebar', genres: @genres %>
+                          <% end %>
+
+                            <br>
+                            <%= link_to "退会する",withdraw_path(@customer.id) ,method: :patch,data: { confirm: '退会すると、会員登録情報やこれまでの投稿履歴が閲覧できなくなります。本当に退会しますか？' },class:"btn btn-outline-primary" %>
+                       </div>
+            </div>
           </div>
-       </div>
-
+      <div class="col-3">
+       <%=render 'public/sidebar', genres: @genres %>
+      </div>
+        </div>
+    </div>
 </div>
 
