--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -49,7 +49,7 @@
                           <% end %>
 
                             <br>
-                            <%= link_to "退会する",withdraw_path(@customer.id) ,method: :patch,data: { confirm: '退会すると、会員登録情報やこれまでの投稿履歴が閲覧できなくなります。本当に退会しますか？' },class:"btn btn-outline-primary" %>
+                            <%= link_to "退会する",withdraw_path(@customer.id) ,method: :patch,data: { confirm: '退会すると、会員登録情報やこれまでの投稿履歴が閲覧できなくなります。本当に退会しますか？' },class:"btn btn-outline-danger" %>
                        </div>
             </div>
           </div>
