--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,12 +1,12 @@
 <div class="container" >
   <div class="row">
-      <div class="col-md-12">
-      <%=render 'public/header' %>
+      <div class="col-12">
+      <%=render 'public/header', genres: @genres %>
       </div>
   </div>
 
   <div class="row">
-    <div class="col-5">
+    <div class="col-md-5 col-sm-12">
       <h2>新規会員登録</h2>
             <br>
 
