--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -36,7 +36,9 @@
            <% end %>
         </tbody>
       </table>
-      <% paginate @customers %>
+      <div class="d-flex justify-content-center">
+      <%= paginate @customers %>
+      </div>
     </div>
     <div class="col-md-3">
      <%=render 'public/sidebar', genres: @genres %>
