--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -35,7 +35,7 @@
             <div class="col-12">
               <div class="row">
                 <% @posts.each do |post| %>
-                <div class="col-md-4 col-sm-12">
+                <div class="col-md-4 col-sm-6">
                   <div class="card mb-4">
                     <% if post.images.attached? && post.images.first.present? %>
                       <%= link_to admin_post_path(post.id) do %>
@@ -51,13 +51,15 @@
                        <%=post.customer.first_name %></p>
                        <p><%= link_to "#{post.nices.count} いいね", admin_post_path(post.id) %></p>
                        <p><%= link_to "#{post.comments.count} コメント", admin_post_path(post.id) %></p>
-                       <%= link_to "削除する",admin_post_path(@customer.id,post.id) ,method: :delete , data: {confirm: "本当に削除しますか？"} %>
+                       <%= link_to "削除する",admin_post_path(post.id) ,method: :delete , data: {confirm: "本当に削除しますか？"} %>
                      </div>
                     </div>
                   </div>
                 </div>
                 <% end %>
-                <% paginate @posts %>
+              </div>
+              <div class="d-flex justify-content-center">
+                <%= paginate @posts %>
               </div>
             </div>
           </div>
