--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -39,8 +39,10 @@
             </div>
           </div>
         <% end %>
-        <%= paginate @posts %>
       </div>
+    　<div class="d-flex justify-content-center">
+        <%= paginate @posts %>
+        </div>
       </div>
     <div class="col-md-3">
       <%=render 'admin/sidebar', genres: @genres %>
