--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -76,10 +76,12 @@
                 </div>
                   <% end %>
               </div>
-
+              <div class="d-flex justify-content-center">
+               <%= paginate @posts %>
+              </div>
             </div>
           </div>
-   </div>
+    </div>
     <div class="col-md-3">
      <%=render 'public/sidebar', genres: @genres %>
    </div>
