--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -16,6 +16,14 @@
           <%=@customer.first_name %>
 
         <% if current_customer.email != 'guests@example.com' %>
+          <%= link_to "フォロー一覧", customer_followings_path(@customer.id),class:"btn btn-outline-primary float-right" %>
+          <%= link_to "フォロワー一覧",  customer_followers_path(@customer.id),class:"btn btn-outline-primary float-right" %>
+        <% end %>
+        <% if @customer==current_customer %>
+          <div><%= link_to "編集する",edit_customer_path(@customer.id),class:"btn btn-outline-primary " %></div>
+          <p>メールアドレス:<%=@customer.email %></p>
+        <% end %>
+        <% if current_customer.email != 'guests@example.com' %>
          <% if current_customer != @customer %>
           <% if current_customer.following?(@customer) %>
             <%= link_to "フォロー外す", customer_relationships_path(@customer.id), method: :delete,class:"btn btn-outline-primary" %>
@@ -23,13 +31,6 @@
             <%= link_to "フォローする", customer_relationships_path(@customer.id), method: :post,class:"btn btn-outline-primary" %>
           <% end %>
          <% end %>
-
-          <%= link_to "フォロー一覧", customer_followings_path(@customer.id),class:"btn btn-outline-primary float-right" %>
-          <%= link_to "フォロワー一覧",  customer_followers_path(@customer.id),class:"btn btn-outline-primary float-right" %>
-        <% end %>
-        <% if @customer==current_customer %>
-          <div><%= link_to "編集する",edit_customer_path(@customer.id),class:"btn btn-outline-primary " %></div>
-          <p>メールアドレス:<%=@customer.email %></p>
         <% end %>
         <p>自己紹介<br>
         <%=@customer.introduction %></p>
@@ -66,7 +67,7 @@
                        <% unless @nice %>
                       　　 <%= link_to "削除する",destroy_path(@customer.id,post.id) ,method: :delete , data: {confirm: "本当に削除しますか？"} %>
                        <% else %>
-                         <%if post.customer== current_customer %>
+                         <%if post.customer==current_customer %>
                          　 <%= link_to"削除する",destroy_path(@customer.id,post.id) ,method: :delete , data: {confirm: "本当に削除しますか？"} %>
                          <%end%>
                        <%end%>
