--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -105,6 +105,7 @@
                     <%= comment.customer.last_name %>
                     <%= comment.customer.first_name %>
                 </p>
+                    <!--<p style="white-space: pre-wrap; word-wrap: break-word;">-->
                     <%=comment.body %><br>
                     <%= comment.created_at.strftime('%Y/%m/%d') %>
                     <% if comment.customer == current_customer %>
