--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -33,7 +33,7 @@
                 <div class="card-text">
                   <p>投稿日:<%= post.created_at.strftime('%Y/%m/%d') %></p>
                   <p><%= link_to "#{post.nices.count} いいね", admin_post_path(post.id) %></p>
-                  <p><%= link_to "#{post.comments.count} コメント", admin_post_path(post.id) %></p>
+                  <p><%= link_to "#{post.comments.where(customer_id: @active_customer_ids).count} コメント", admin_post_path(post.id) %></p>
                 </div>
               </div>
             </div>
